package com.lukire.event.events;

import com.lukire.event.Event;

public class EntityOnEntityCollision extends Event {
}
