@startuml

title __EVENTS's Class Diagram__\n

  namespace com.lukire.event {
    namespace events {
      class com.lukire.event.events.ClickEvent {
          ~ screen : PApplet
          {static} - camera : Camera
          - mouseEvent : MouseEvent
          + ClickEvent()
          + getMouseEvent()
          + getScreen()
          + getX()
          + getY()
      }
    }
  }
  

  namespace com.lukire.event {
    namespace events {
      class com.lukire.event.events.EntityBlockCollisionEvent {
          ~ collisions : ArrayList<Collision>
          + EntityBlockCollisionEvent()
          + getCollisions()
          + getEntity()
      }
    }
  }
  

  namespace com.lukire.event {
    namespace events {
      class com.lukire.event.events.EntityOnEntityCollision {
      }
    }
  }
  

  namespace com.lukire.event {
    namespace events {
      class com.lukire.event.events.KeyPressEvent {
          ~ keyEvent : KeyEvent
          + KeyPressEvent()
          + getKeyEvent()
      }
    }
  }
  

  namespace com.lukire.event {
    namespace events {
      class com.lukire.event.events.MouseMoveEvent {
          {static} ~ camera : Camera
          ~ e : MouseEvent
          ~ screen : PApplet
          + MouseMoveEvent()
          + getMouseEvent()
          + getScreen()
          + getX()
          + getY()
      }
    }
  }
  

  namespace com.lukire.event {
    namespace events {
      class com.lukire.event.events.NewFrameEvent {
          ~ fps : int
          ~ frameCount : int
          ~ screen : PApplet
          ~ secondPerFrame : double
          + NewFrameEvent()
          + getFps()
          + getFrameCount()
          + getScreen()
          + getSecondPerFrame()
      }
    }
  }
  

  com.lukire.event.events.ClickEvent -up-|> com.lukire.event.Event
  com.lukire.event.events.EntityBlockCollisionEvent -up-|> com.lukire.event.Event
  com.lukire.event.events.EntityBlockCollisionEvent o-- com.lukire.entity.Entity : e
  com.lukire.event.events.EntityOnEntityCollision -up-|> com.lukire.event.Event
  com.lukire.event.events.KeyPressEvent -up-|> com.lukire.event.Event
  com.lukire.event.events.MouseMoveEvent -up-|> com.lukire.event.Event
  com.lukire.event.events.NewFrameEvent -up-|> com.lukire.event.Event


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
